WIP:Guardando Cambios turnero

--- a/src/app/Componentes/carrousel/carrousel.component.html
+++ b/src/app/Componentes/carrousel/carrousel.component.html
@@ -1,20 +1,21 @@
 <div >  
   
     <div>  
-        <ngb-carousel style="margin-left: 0%!important;margin-right:0%!important;">  
-            <ng-template ngbSlide style="margin-left: 0%!important;margin-right:0%!important;">  
-                <img style="width: 100%; height: 475.646px;" src="http://portal.lamar.edu.mx/oficial/images/headers/odonto-1920x677.jpg" alt="Delhi Metro">  
-                <div class="content" style="  position: absolute;
-                bottom: 0;
-                background: rgb(0, 106, 133); /* Fallback color */
-                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
-                color: #f1f1f1;
-                width: 100%;
-                padding: 20px;">
-                        <h1>Implantes Dentales: Información General</h1>
-                        <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
-                </div>
-            </ng-template>  
+            <ngb-carousel style="margin-left: 0%!important;margin-right:0%!important;">  
+
+            <ng-template ngbSlide>  
+                    <img style="width: 100%; height: 475.646px;" src="http://portal.lamar.edu.mx/oficial/images/headers/odonto-1920x677.jpg" alt="Bangalore Metro">  
+                    <div class="content" style="  position: absolute;
+                    bottom: 0;
+                    background: rgb(0, 106, 133); /* Fallback color */
+                    background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
+                    color: #f1f1f1;
+                    width: 100%;
+                    padding: 20px;">
+                           <h1>Implantes Dentales: Información General</h1>
+                           <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
+                   </div>
+                </ng-template>
             <ng-template ngbSlide>  
                 <img style="width: 100%; height: 475.646px;" src="https://portal.lamar.edu.mx/oficial/images/licenciaturas/1920x677_17.jpg" alt="Bangalore Metro">  
                 <div class="content" style="  position: absolute;
