--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,13 +45,13 @@
 				  <span class="text-uppercase text-white"style="font-weight: bold;" >Gestión</span>
 				  <ul class="nav flex-column">
 				  <li class="nav-item">
-					<a class="nav-link active" href="#">Pedi tu Turno!</a>
+					<a class="nav-link active" routerLink="/TurnosAlta">Pedi tu Turno!</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="#">Info Turnos</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Encuesta</a>
+					<a class="nav-link" routerLink="encuestacliente">Encuesta</a>
 				  </li>
 				</ul>
 				</div>
