WIP:Login Reparado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,7 +101,7 @@
 		  </div>
 		</li>
 
-		<li class="nav-item dropdown">
+		<li class="nav-item dropdown" *ngIf="userProfile?.perfil=='Supervisor'">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  ADMINISTRACIÓN
 			</a>
@@ -193,7 +193,7 @@
 	
 			</div>
 		  </li>
-		  <li class="nav-item dropdown">
+		  <li class="nav-item dropdown"  *ngIf="userProfile?.perfil=='especialista' ">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				  ESPECIALISTA
 				</a>
@@ -232,7 +232,7 @@
 		
 				</div>
 			  </li>
-			  <li class="nav-item dropdown">
+			  <li class="nav-item dropdown" *ngIf="userProfile?.perfil=='recepcionista'"> 
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
 					  RECEPCIÓN
 					</a>
@@ -283,15 +283,17 @@
 	  </ul>
 	  <form class="form-inline my-2 my-lg-0" *ngIf="show" >
 		<!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-		<button class="btn btn-outline-light my-2 my-sm-0"  (click)="openDialog()" type="submit">Iniciar Sesíon</button>
+		<button class="btn btn-outline-light my-2 my-sm-0"  (click)="openDialog()" type="submit"  *ngIf="userProfile?.perfil == undefined ">Iniciar Sesíon</button>
 	  </form>
 	  <form class="form-inline my-2 my-lg-0">
 		<!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-		<button class="btn btn-outline-light my-2 my-sm-0"   (click)="logout()" style="background-color: #00ff2a;color:whitesmoke" >JUAN PEREZ</button>
-	  </form>
+		<button class="btn btn-outline-light my-2 my-sm-0"   (click)="logout()" style="font-weight:bold;background-color: #ff0000;color:whitesmoke" >logout</button>
+		<!-- <button class="btn btn-outline-light my-2 my-sm-0"   (click)="Detectar()" style="background-color: #00ff2a;color:whitesmoke" >Detectar</button> -->
+	 
+	</form>
 	  <form class="form-inline my-2 my-lg-0">
 		<!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-		<button class="btn  my-2 my-sm-0"style="color: whitesmoke"  (click)="openDialog()" type="submit">:{{email}}</button>
+		<button class="btn  my-2 my-sm-0"style="color: whitesmoke"  (click)="openDialog()" type="submit">{{perfil}}</button>
 	  </form>
 	</div>
 
