--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,4 @@
-  
+<!--   
     <div class="login-box">
       <img src="/assets/imagenes/logo.png" class="avatar" alt="Avatar Image">
       <h1>Ingreso</h1>
@@ -7,7 +7,6 @@
         
         <input type="text" placeholder="Ingrese usuario"   name="uname" [(ngModel)]="email" >
         <label for="password">Contraseña</label>
-        <input type="password"  name="psw" style=" font-size: 22px"   placeholder="Ingrese contraseña"   [(ngModel)]="password" >
         <input type="submit"  (click)="loginUser()" value="Log In">
         <h4>Seleccione Usuario</h4>
  
@@ -32,5 +31,110 @@
       </form>
 
 
+    </div> -->
+<!-- 
+    <div  role="dialog"
+    aria-labelledby="myModalLabel" aria-hidden="true"> -->
+    <!-- <div class="modal-dialog" style="box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);" role="document">
+    <div class="modal-content form-elegant" style="box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);">
+    -->
+<mat-dialog-content class="mat-typography" style="border: none;padding: 0px!important;    max-height: 900px!important;">
+
+      <!--Content-->
+      <div class="modal-content form-elegant" style="border: none;padding: 0px!important;">
+          <!--Header-->
+    <!--Header-->
+    <div class="modal-header text-center"style="border: none;padding: 0px!important;"> 
+        <h3 class="modal-title w-100 dark-grey-text font-weight-bold my-3"  style="border: none;"id="myModalLabel">
+          <strong>Sign in</strong>
+        </h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+  <!--Body-->
+  <div class="modal-body mx-4">
+    <!--Body-->
+    <div class="md-form mb-5">
+      <input type="email"  id="Form-email1" class="form-control" mdbInput mdbValidate style="    border: none;
+      border-bottom: 1px solid #ced4da;"
+            [(ngModel)]="email" >
+      <label for="Form-email1">Your email</label>
+      <!-- <mdb-error
+        *ngIf="modalFormElegantEmail.invalid && (modalFormElegantEmail.dirty || modalFormElegantEmail.touched)">
+        Input invalid
+      </mdb-error> -->
+      <!-- <mdb-success
+        *ngIf="modalFormElegantEmail.valid && (modalFormElegantEmail.dirty || modalFormElegantEmail.touched)">Input
+        valid
+      </mdb-success> -->
     </div>
 
+    <div class="md-form pb-3">
+      <input type="password" id="Form-pass1" class="form-control" mdbInput mdbValidate  style="    border: none;
+      border-bottom: 1px solid #ced4da;" [(ngModel)]="password"
+            >
+            <!-- [formControl]="modalFormElegantPassword" -->
+      <label for="Form-pass1">Your password</label>
+      <!-- <mdb-error
+        *ngIf="modalFormElegantPassword.invalid && (modalFormElegantPassword.dirty || modalFormElegantPassword.touched)">
+        Input invalid
+      </mdb-error> -->
+      <!-- <mdb-success
+        *ngIf="modalFormElegantPassword.valid && (modalFormElegantPassword.dirty || modalFormElegantPassword.touched)">
+        Input valid
+      </mdb-success> -->
+      <p class="font-small blue-text d-flex justify-content-end">Forgot
+        <a href="#" class="blue-text ml-1"> Password?</a>
+      </p>
+    </div>
+
+    <div class="text-center mb-3">
+      <button type="button"  mat-button [mat-dialog-close]="true" (click)="loginUser()"  style="     border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+              mdbWavesEffect>Sign in
+      </button>
+    </div>
+    <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> or Sign in
+      with:</p>
+
+    <div class="row my-3 d-flex justify-content-center">
+        <select  [(ngModel)]="tipousuario"name="something" #t (change)="usuario(t.value)" style="background-color:#303f9f;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  " >
+            <option value="Administrador">Administrador</option>
+            <option value="Recepcionista">Recepcionista</option>
+            <option value="PacienteA">Paciente A </option>
+            <option value="PacienteB">Paciente B</option>
+            <option value="Odontologo1">Odontologo 1</option>
+            <option value="Odontologo2">Odontologo 2</option>
+        
+        
+          </select>
+
+      <!-- <button type="button" mdbBtn color="white" rounded="true" class="mr-md-3 z-depth-1a waves-light"
+              mdbWavesEffect>
+        <mdb-icon fab icon="facebook-f" class="text-center"></mdb-icon>
+      </button>
+
+      <button type="button" mdbBtn color="white" rounded="true" class="mr-md-3 z-depth-1a waves-light"
+              mdbWavesEffect>
+        <mdb-icon fab icon="twitter"></mdb-icon>
+      </button>
+
+      <button type="button" mdbBtn color="white" rounded="true" class="z-depth-1a waves-light"
+              mdbWavesEffect>
+        <mdb-icon fab icon="google-plus"></mdb-icon>
+      </button> -->
+    </div>
+  </div>
+</div>
+  
+
+ 
+</mat-dialog-content>
+<!-- </div>
+</div> -->
+<!-- <mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button [mat-dialog-close]="true" (click)="loginUser()" cdkFocusInitial>Log In</button>
+</mat-dialog-actions>
+ -->
