--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -6,9 +6,27 @@
   </nav>
   <div class="page-content">
     <div class="row">
-      <div class="col col-md-4">
+      <!-- <div class="col col-md-4">
         <img class="img-avatar" src="{{avatarLink}}">
         <button mat-stroked-button class="change-img-button" color="primary" (click)="openDialog()">Elegir Imagen</button>
+      </div> -->
+
+      <div class="col col-md-4">
+
+          <div class="text-center">
+              <img formControlName="imageUrl2"    class="img-avatar"  style=" border-radius: 50%;
+              width: 150px;
+              display: block;
+              margin: 20px auto;" [src]="imgSrc" width="350px" height="250px" (click)="fileUploader.click()">
+            </div>
+            <div class="form-group">
+              <label>Seleccione una imagen para subir</label>
+              <input type="file" accept="image/*" class="form-control" #fileUploader formControlName="imageUrl"
+                (change)="showPreview($event)">
+              <!-- <div class="text-danger" *ngIf="isSubmitted && formControls.imageUrl.errors?.required">This field is required. -->
+              <!-- </div> -->
+            </div>
+
       </div>
 
       <div class="col col-md-8">
