--- a/src/app/Componentes/turnos-recepcion/turnos-recepcion.component.html
+++ b/src/app/Componentes/turnos-recepcion/turnos-recepcion.component.html
@@ -43,7 +43,7 @@
                 <div class="form-group">
 
                   <mat-form-field>
-                      <input matInput [matDatepicker] = "picker" [(ngModel)]="DiaTurno"  (dateChange)="addEvent('change', $event)"  formControlName="DiaTurno" >
+                      <input matInput [matDatepicker] = "picker" [(ngModel)]="DiaTurno"  (dateChange)="addEvent('change', $event)"  formControlName="DiaTurno" placeholder = "Elegi la fecha para tu turno!">
                       <mat-datepicker-toggle matSuffix [for] = "picker"></mat-datepicker-toggle>
                       <mat-datepicker #picker></mat-datepicker>
                    </mat-form-field>
@@ -73,7 +73,7 @@
                 <div *ngFor="let item of profesionales" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="row">
                     <div class="col col-md-2 image-col">
-                      <img class="image"   style="width: 270px;height: 275px;" [src]="item.avatar">
+                      <img class="image" [src]="item.avatar">
                     </div>
                     <div class="col col-md-8 text-col">
                         <nav aria-label="breadcrumb">
@@ -86,15 +86,15 @@
 
                 
                     </div>
-                  
+                    <div class="col col-md-8 text-col">
+                      <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5>
+                   
+                    </div>
                     <div class="col col-md-2 actions-col">
-                      <!-- <button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="viewDetails(item)" type="button">
+                      <button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="viewDetails(item)" type="button">
                         <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
                         Elegir
-                      </button> -->
-                      <button type="button"  mat-button [mat-dialog-close]="true" (click)="loginUser()"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
-                      mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> ELEGIR
-              </button>
+                      </button>
                     
                     </div>
                   </div>
@@ -105,8 +105,63 @@
               <!--Fin listado -->
 
 
-     
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Profesional</li>
+              </ol>
+            </nav>
 
+
+            <div class="form-group">
+   
+              <select placeholder="cliente"  [(ngModel)]="profesional" class="form-control" formControlName="profesional"
+                style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  ">
+          
+                <option *ngFor="let tech of objectKeys(listadoespecialistaspordia) " [ngValue]="tech.id">
+                  {{ tech.email }}
+                </option>
+          
+          
+              </select>
+            </div>
+
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Consultorio</li>
+              </ol>
+            </nav>
+
+
+            <div class="form-group">
+              <select placeholder="cliente"  [(ngModel)]="consultorio" class="form-control" formControlName="consultorio"
+                style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  ">
+          
+                <option *ngFor="let tech of consultorios" [ngValue]="tech">
+                  {{ tech }}
+                </option>
+          
+          
+              </select>
+            </div>
+
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active" aria-current="page">Cliente</li>
+    </ol>
+  </nav>
+
+  <div class="form-group">
+   
+    <select placeholder="cliente"  [(ngModel)]="cliente" class="form-control" formControlName="cliente"
+      style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  ">
+
+      <option *ngFor="let tech of clientes" [ngValue]="tech.id">
+        {{ tech.email }}
+      </option>
+
+
+    </select>
+  </div>
 
   
 
@@ -114,14 +169,9 @@
   <div class="row submit-button-container" style="                width: 100%;
             justify-content: flex-end; ">
     <div class="col-md-4">
-      <!-- <button mat-raised-button class="submit-button" color="primary" type="submit"
-       >Crear</button> -->
-
-       <button type="submit"  mat-button [mat-dialog-close]="true" (click)="loginUser()"  style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
-       mdbWavesEffect>
-       <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button>
+      <button mat-raised-button class="submit-button" color="primary" type="submit"
+       >Crear</button>
     </div>
-
   </div>
 
   <!-- [disabled]="!exampleForm.valid" -->
