--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -59,6 +59,15 @@
               <mat-error *ngIf="exampleForm.get('age').hasError(validation.type) && (exampleForm.get('age').dirty || exampleForm.get('age').touched)">{{validation.message}}</mat-error>
             </ng-container>
           </div>
+          
+          <div class="form-group">
+              <mat-form-field class="input-style">
+                <input matInput  placeholder="Email" class="form-control" formControlName="email">
+              </mat-form-field>
+              <ng-container *ngFor="let validation of validation_messages.age">
+                <mat-error *ngIf="exampleForm.get('email').hasError(validation.type) && (exampleForm.get('email').dirty || exampleForm.get('email').touched)">{{validation.message}}</mat-error>
+              </ng-container>
+            </div>
 
           <div class="row submit-button-container">
             <div class="col-md-4">
