--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -48,9 +48,9 @@
         <h3 class="modal-title w-100 dark-grey-text font-weight-bold my-3"  style="border: none;"id="myModalLabel">
           <strong>Sign in</strong>
         </h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
           <span aria-hidden="true">&times;</span>
-        </button>
+        </button> -->
       </div>
 
   <!--Body-->
