--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <div class="pill-nav">
 
 	<div class="separador">
-	  <a  href="#home">Inicio</a>
+	  <a routerLink="/Home">Inicio</a>
 	 </div>
 	 <div class="separador">
 	  </div>
@@ -22,7 +22,7 @@
 	</div>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
-	<a class="navbar-brand" style="font-weight: bold;" href="#">MegaDental</a>
+	<a class="navbar-brand" style="font-weight: bold;"  routerLink="/" >MegaDental</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
 	</button>
@@ -33,7 +33,7 @@
 	
 	
 		<li class="nav-item dropdown" *ngIf="userProfile?.perfil=='paciente'">
-		  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		  <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			TRÁMITES ONLINE
 		  </a>
 		  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -48,10 +48,10 @@
 					<a class="nav-link active" routerLink="/TurnosAlta">Pedi tu Turno!</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Info Turnos</a>
+					<a class="nav-link">Info Turnos</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" routerLink="encuestacliente">Encuesta</a>
+					<a class="nav-link" routerLink="/encuestacliente">Encuesta</a>
 				  </li>
 				</ul>
 				</div>
@@ -81,10 +81,10 @@
 					<a class="nav-link active"  routerLink="/miPerfil" >Mi Perfil</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Historial Clinico</a>
+					<a class="nav-link">Historial Clinico</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Detalles</a>
+					<a class="nav-link">Detalles</a>
 				  </li>
 				</ul>
 				</div>
@@ -102,7 +102,7 @@
 		</li>
 
 		<li class="nav-item dropdown" *ngIf="userProfile?.perfil=='Supervisor'">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  ADMINISTRACIÓN
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -194,7 +194,7 @@
 			</div>
 		  </li>
 		  <li class="nav-item dropdown"  *ngIf="userProfile?.perfil=='especialista' ">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				  ESPECIALISTA
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -233,7 +233,7 @@
 				</div>
 			  </li>
 			  <li class="nav-item dropdown" *ngIf="userProfile?.perfil=='recepcionista'"> 
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
+					<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
 					  RECEPCIÓN
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -264,7 +264,7 @@
 						  </div>
 						  <!-- /.col-md-4  -->
 						  <div class="col-md-4">
-							<a href="">
+							<a>
 							  <img src=" https://cdn2.f-cdn.com/contestentries/1421844/27630627/5bace868330af_thumb900.jpg" style="width:180px;"class="img-fluid">
 							</a>
 							<!-- <p class="text-white">Short image call to action</p> -->
@@ -290,10 +290,12 @@
 	  </form>
 	  <form class="form-inline my-2 my-lg-0">
 		<!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-		<button class="btn btn-outline-light my-2 my-sm-0"   (click)="logout()" style="font-weight:bold;background-color: #ff0000;color:whitesmoke"  *ngIf="userProfile?.perfil != undefined " >  <ion-icon name="md-log-out"></ion-icon>
-			Salir</button>
+		<button class="btn btn-outline-light my-2 my-sm-0" href="#"  (click)="logout()" style="font-weight:bold;background-color: #ff0000;color:whitesmoke"  *ngIf="userProfile?.perfil != undefined " >  <ion-icon name="md-log-out"></ion-icon>
+		<a href="#home"> salir</a>	</button>
+	
 		<!-- <button class="btn btn-outline-light my-2 my-sm-0"   (click)="Detectar()" style="background-color: #00ff2a;color:whitesmoke" >Detectar</button> -->
-	 
+		<button class="btn btn-outline-light my-2 my-sm-0"   (click)="Detectar()" style="font-weight:bold;background-color: #ff0000;color:whitesmoke" >  <ion-icon name="md-log-out"></ion-icon>
+			Detectar</button>
 	</form>
 	
 
@@ -313,7 +315,6 @@
 		<footer class="liquidWrapper">
 			<div class="container" style="    display: flex;">
 			  <div class="col-xs-3 footer-brand boxsizingFooter">
-				<!-- <a class="boxsizingFooter" href="#"><img src="../img/logo_w.svg" height="35px"></a> -->
 			  </div>
 			  <div class="boxsizingFooter" style="position: relative; height: 100%;">
 				<div class="boxsizingFooter col-xs-2 col-xs-offset-1 " style="  box-sizing: border-box;   margin-left: 7.33333333%;
@@ -324,11 +325,11 @@
 			   
 				<div class="footerInf liquidWrapper">
 				  <div class="legales">
-					<p>MegaDental 2019 - Todos los derechos reservados - Av. Liniers 467 - Piso 9 - C1001AAF - Buenos Aires - 0800 555 Dental (6733)<br>Superintendencia de Servicios de Salud -Clinica Dental- 0800-222-DENTAL (72583) - <a href="http://www.dental.gob.ar" target="_blank" class="link_footer" style="font-size: 9px;">www.MegaDental.gob.ar</a> - R.N.E.M.P. (Prov.) 1408 - R.N.O.S. 4-0080-0<br></p>
+					<p>MegaDental 2019 - Todos los derechos reservados - Av. Liniers 467 - Piso 9 - C1001AAF - Buenos Aires - 0800 555 Dental (6733)<br>Superintendencia de Servicios de Salud -Clinica Dental- 0800-222-DENTAL (72583) - <a routerLink="/" target="_blank" class="link_footer" style="font-size: 9px;">www.MegaDental.gob.ar</a> - R.N.E.M.P. (Prov.) 1408 - R.N.O.S. 4-0080-0<br></p>
 				  </div>
 				  <div id="logotipos">
-					<div class="pdp"><a target="_blank" href="http://ssl.comodo.com/"></a></div>
-					<div class="certisur"><a href="#!osde-direccion-nacional-de-datos-personales.html"></a></div>
+					<div class="pdp"><a target="_blank" ></a></div>
+					<div class="certisur"><a routerLink="/"></a></div>
 				  </div>
 				</div>
 			  </div>
