Agregando modificaciones mis Turnos

--- a/src/app/Componentes/turnos-alta/turnos-alta.component.html
+++ b/src/app/Componentes/turnos-alta/turnos-alta.component.html
@@ -69,8 +69,8 @@
                 </select>
               </div>
 <!--listado-->
-            <div class="list-group users-list"  *ngIf="mostrarListado">
-                <div *ngFor="let item of objectKeys(listadoespecialistaspordia) " class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="list-group users-list"  *ngIf="mostrarListado" >
+                <div *ngFor="let item of listadoespecialistaspordia " class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="row">
                     <div class="col col-md-2 image-col">
                       <img class="image"   style="width: 270px;height: 275px;" [src]="item.avatar">
@@ -87,16 +87,13 @@
                 
                     </div>
                   
-                    <div class="col col-md-2 actions-col"   *ngIf="mostrarbotonSeleccionar">
-                      <!-- <button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="viewDetails(item)" type="button">
-                        <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
-                        Elegir
-                      </button> -->
+                    <!-- <div class="col col-md-2 actions-col"   *ngIf="mostrarbotonSeleccionar">
+               
                       <button type="button"   (click)="viewDetails(item)"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
                       mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> ELEGIR
               </button>
                     
-                    </div>
+                    </div> -->
                   </div>
                 </div>
             
@@ -133,6 +130,43 @@
               </div>
 
               <!---->
+              
+              <!--mostrar LISTADOFINAL elegido-->
+             
+            <div class="list-group users-list"    *ngIf="mostrarListadoFinal">
+                <div   style="background-color:red;"*ngFor="let item of listadoFinal " class="list-group-item list-group-item-action flex-column align-items-start">
+                  <div class="row"  >
+                    <div class="col col-md-2 image-col">
+                      <img class="image"   style="width: 270px;height: 275px;" [src]="item.avatar">
+                    </div>
+                    <div class="col col-md-8 text-col">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                              <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
+                            </ol>
+                          </nav>
+                      <h5 class="mb-1"> Especialista</h5>
+                      <small>{{item.name}}</small>
+
+                
+                    </div>
+                  
+                    <div class="col col-md-2 actions-col" >
+                      <!-- <button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="viewDetails(item)" type="button">
+                        <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
+                        Elegir
+                      </button> -->
+                      <button type="button"   (click)="viewDetails(item)"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+                      mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> ELEGIR
+                     </button>
+                    
+                    </div>
+                  </div>
+                </div>
+            
+             
+              </div>
+              <!--Fin listado -->
 
      
 
@@ -146,12 +180,18 @@
       <!-- <button mat-raised-button class="submit-button" color="primary" type="submit"
        >Crear</button> -->
 
-       <button type="submit"  mat-button   (click)="loginUser()"  style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+       <button type="submit"  mat-button   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
        mdbWavesEffect>
        <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button>
     </div>
 
+    <button type="button"   (click)="datosCliente()"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+    mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> Datos Cliente
+</button>
+
   </div>
+
+
 
   <!-- [disabled]="!exampleForm.valid" -->
   </form>
