--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 					<a class="nav-link active" routerLink="/TurnosAlta">Pedi tu Turno!</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link">Info Turnos</a>
+					<a class="nav-link"routerLink="/misTurnos" >Mis Turnos</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" routerLink="/encuestacliente">Encuesta</a>
