--- a/src/app/Componentes/miperfil/miperfil.component.html
+++ b/src/app/Componentes/miperfil/miperfil.component.html
@@ -1,4 +1,4 @@
-<div class="edit-page">
+<!-- <div class="edit-page">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">Mi PERFIL </li>
@@ -6,10 +6,7 @@
         </nav>
         <div class="page-content">
           <div class="row">
-            <!-- <div class="col col-md-4">
-              <img class="img-avatar" [src]="item.avatar">
-              <button mat-stroked-button class="change-img-button" color="primary" (click)="openDialog()">Change Avatar</button>
-            </div> -->
+    
             <div class="col col-md-8">
       
               <form class="edit-form" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
@@ -53,5 +50,5 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       
