--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,9 +83,6 @@
 				  <li class="nav-item">
 					<a class="nav-link">Historial Clinico</a>
 				  </li>
-				  <li class="nav-item">
-					<a class="nav-link">Detalles</a>
-				  </li>
 				</ul>
 				</div>
 				<!-- /.col-md-4  -->
@@ -113,11 +110,11 @@
 				  <div class="col-md-4">
 					<span class="text-uppercase text-white" style="font-weight: bold; ">REGISTRO</span>
 					<ul class="nav flex-column">
-					
+<!-- 					
 					<li class="nav-item">
 						<a class="nav-link" routerLink="/altas">Registrar Recepcionista
 						</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link" routerLink="/new-user">Registrar Usuario
 							</a>
@@ -215,7 +212,7 @@
 							<a class="nav-link"  routerLink="listadopacientes">Agregar Reseña</a>
 						  </li>
 						<li class="nav-item">
-							<a class="nav-link" routerLink="/TurnosAlta">	<ion-icon name="add"></ion-icon>
+							<a class="nav-link" routerLink="/TurnosEspecialista">	<ion-icon name="add"></ion-icon>Turnos para paciente
 							</a>
 							</li>
 					  </ul>
