--- a/src/app/Componentes/listado-especialistas/listado-especialistas.component.html
+++ b/src/app/Componentes/listado-especialistas/listado-especialistas.component.html
@@ -82,7 +82,7 @@
     <div *ngFor="let item of items" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="row">
         <div class="col col-md-2 image-col">
-          <img class="image" [src]="item.payload.doc.data().avatar">
+          <img class="image"  style="width: 128px;height:128px;"  [src]="item.payload.doc.data().avatar">
         </div>
         <div class="col col-md-8 text-col">
             <nav aria-label="breadcrumb">
